set(SOURCES
    LinearMath/btQuickprof.cpp
    LinearMath/btAlignedAllocator.cpp
    LinearMath/btVector3.cpp
    LinearMath/btConvexHull.cpp
    LinearMath/btSerializer.cpp
    LinearMath/btPolarDecomposition.cpp
    LinearMath/TaskScheduler/btThreadSupportPosix.cpp
    LinearMath/TaskScheduler/btTaskScheduler.cpp
    LinearMath/btSerializer64.cpp
    LinearMath/btThreads.cpp
    LinearMath/btConvexHullComputer.cpp
    LinearMath/btGeometryUtil.cpp
    BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
    BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
    BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
    BulletDynamics/Character/btKinematicCharacterController.cpp
    BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
    BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
    BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
    BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
    BulletDynamics/ConstraintSolver/btGearConstraint.cpp
    BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
    BulletDynamics/ConstraintSolver/btBatchedConstraints.cpp
    BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
    BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
    BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
    BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
    BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
    BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolverMt.cpp
    BulletDynamics/ConstraintSolver/btContactConstraint.cpp
    BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
    BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
    BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
    BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
    BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
    BulletDynamics/Dynamics/btRigidBody.cpp
    BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.cpp
    BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
    BulletDynamics/Dynamics/btSimulationIslandManagerMt.cpp
    BulletDynamics/Vehicle/btRaycastVehicle.cpp
    BulletDynamics/Vehicle/btWheelInfo.cpp
    BulletDynamics/Featherstone/btMultiBodyGearConstraint.cpp
    BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
    BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp
    BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
    BulletDynamics/Featherstone/btMultiBody.cpp
    BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
    BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp
    BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
    BulletDynamics/Featherstone/btMultiBodyMLCPConstraintSolver.cpp
    BulletDynamics/Featherstone/btMultiBodySphericalJointMotor.cpp
    BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
    BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
    BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
    BulletSoftBody/btSoftBodyHelpers.cpp
    BulletSoftBody/btSoftRigidDynamicsWorld.cpp
    BulletSoftBody/btDeformableMultiBodyDynamicsWorld.cpp
    BulletSoftBody/btSoftBody.cpp
    BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
    BulletSoftBody/btDeformableMultiBodyConstraintSolver.cpp
    BulletSoftBody/btDefaultSoftBodySolver.cpp
    BulletSoftBody/btDeformableContactConstraint.cpp
    BulletSoftBody/btDeformableContactProjection.cpp
    BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
    BulletSoftBody/btSoftMultiBodyDynamicsWorld.cpp
    BulletSoftBody/btDeformableBackwardEulerObjective.cpp
    BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
    BulletSoftBody/btDeformableBodySolver.cpp
    BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
    BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
    BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
    BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
    BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
    BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
    BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
    BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
    BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
    BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
    BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
    BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
    BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
    BulletCollision/CollisionDispatch/btCollisionWorld.cpp
    BulletCollision/CollisionDispatch/btCollisionDispatcherMt.cpp
    BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
    BulletCollision/CollisionDispatch/btCollisionObject.cpp
    BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
    BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
    BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
    BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
    BulletCollision/CollisionDispatch/btManifoldResult.cpp
    BulletCollision/CollisionDispatch/btUnionFind.cpp
    BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
    BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btGhostObject.cpp
    BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
    BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
    BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
    BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
    BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
    BulletCollision/CollisionShapes/btMiniSDF.cpp
    BulletCollision/CollisionShapes/btConeShape.cpp
    BulletCollision/CollisionShapes/btCapsuleShape.cpp
    BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
    BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
    BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
    BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
    BulletCollision/CollisionShapes/btCollisionShape.cpp
    BulletCollision/CollisionShapes/btTetrahedronShape.cpp
    BulletCollision/CollisionShapes/btCompoundShape.cpp
    BulletCollision/CollisionShapes/btConvex2dShape.cpp
    BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
    BulletCollision/CollisionShapes/btMultiSphereShape.cpp
    BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
    BulletCollision/CollisionShapes/btCylinderShape.cpp
    BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
    BulletCollision/CollisionShapes/btTriangleCallback.cpp
    BulletCollision/CollisionShapes/btOptimizedBvh.cpp
    BulletCollision/CollisionShapes/btConcaveShape.cpp
    BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
    BulletCollision/CollisionShapes/btConvexShape.cpp
    BulletCollision/CollisionShapes/btTriangleMesh.cpp
    BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
    BulletCollision/CollisionShapes/btConvexHullShape.cpp
    BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
    BulletCollision/CollisionShapes/btTriangleBuffer.cpp
    BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
    BulletCollision/CollisionShapes/btBox2dShape.cpp
    BulletCollision/CollisionShapes/btShapeHull.cpp
    BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
    BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
    BulletCollision/CollisionShapes/btSphereShape.cpp
    BulletCollision/CollisionShapes/btConvexInternalShape.cpp
    BulletCollision/CollisionShapes/btSdfCollisionShape.cpp
    BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
    BulletCollision/CollisionShapes/btEmptyShape.cpp
    BulletCollision/CollisionShapes/btBoxShape.cpp
    BulletCollision/CollisionShapes/btUniformScalingShape.cpp
    BulletCollision/Gimpact/btTriangleShapeEx.cpp
    BulletCollision/Gimpact/gim_box_set.cpp
    BulletCollision/Gimpact/btGImpactShape.cpp
    BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
    BulletCollision/Gimpact/gim_contact.cpp
    BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
    BulletCollision/Gimpact/btGImpactBvh.cpp
    BulletCollision/Gimpact/btContactProcessing.cpp
    BulletCollision/Gimpact/gim_tri_collision.cpp
    BulletCollision/Gimpact/btGenericPoolAllocator.cpp
    BulletCollision/Gimpact/gim_memory.cpp
    BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
    BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
    BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
    BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
    BulletCollision/BroadphaseCollision/btDispatcher.cpp
    BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
    BulletCollision/BroadphaseCollision/btDbvt.cpp
    BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
    BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
)

include_directories(${AF3D_INCLUDE_DIR}/bullet)
include_directories(${AF3D_INCLUDE_DIR}/bullet/LinearMath)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/MLCPSolvers)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/Character)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/ConstraintSolver)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/Dynamics)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/Vehicle)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletDynamics/Featherstone)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletSoftBody)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletCollision/NarrowPhaseCollision)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletCollision/CollisionDispatch)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletCollision/CollisionShapes)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletCollision/Gimpact)
include_directories(${AF3D_INCLUDE_DIR}/bullet/BulletCollision/BroadphaseCollision)

add_library(bullet STATIC ${SOURCES})
